# placo-examples

./: README.md
cpp/: .gitignore  CMakeLists.txt  README.md  example.cpp  example.h  module.cpp  run.py
dynamics/: differential.py  megabot.py  planar_2dof.py  quadruped.py  quadruped_hanging.py  quadruped_puppet.py  sigmaban.py  sigmaban_collisions.py  sigmaban_external_wrench.py  ur5_fixed_contact.py  ur5_joints.py  ur5_targets.py
kinematics/: 6axis_basic.py  6axis_interpolation.py  6axis_joint.py  6axis_regularization.py  6axis_scaled.py  6axis_targets.py  6axis_trajectory.py  differential.py  humanoid.py  humanoid_collisions.py  humanoid_distance.py  megabot.py  omniwheel.py  orbita_joint.py  orbita_task.py  orbita_yaw.py  planar-2dof-joints.py  planar_2dof_gear.py  planar_2dof_joints.py  planar_2dof_trajectory.py  quadruped_targets.py  spm.py
models/: README.md  view.py
models/differential/: base.part  base.stl  config.json  ring.part  ring.stl  robot.urdf  sahft1.part  sahft1.stl  shaft1.part  shaft1.stl  shaft2.part  shaft2.stl
models/megabot/: center.part  femur.stl  (+26 more)
problem/: com_polygon.py  com_polygon_scaled.py
robot_wrapper/: collisions.py
tools/: cubic_spline.py  frames_interpolation.py  interpolate_frames.py  optimal_transformation.py  rotation_from_axis.py
visualization/: arrow.py  frame.py  robot.py  visualize_arrow.py  visualize_frame.py  visualize_lines.py  visualize_point.py
walk/: com_planning.py  footsteps_planner.py  walk.py
workspace/: README.md  build_polytope.py  kinematics.py  polytope.py  workspace.pkl  workspace_estimation.py
(+119 files in other folders)
